--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+#Data Source Properties
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/car_dealership?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Aa@153759
 
+#JPA Properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql = TRUE
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.open-in-view=false
+
+#Show SQL executed with parameter bindings
+logging.level.org.hibernate.SQL = TRACE
+logging.level.org.hibernate.type.descriptor = TRACE
