--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>6.1.2</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>junit</groupId>
