--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.jpa.open-in-view=false
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL = TRACE
 logging.level.org.hibernate.type.descriptor = TRACE
+
+
+# App Properties
+car_dealership.jwtCookieName= dealership
+car_dealership.jwtSecret= ======================dealershipJwtSecret===========================
+car_dealership.jwtExpirationMs= 30000
