React files upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ logging.level.org.hibernate.type.descriptor = TRACE
 # App Properties
 car_dealership.jwtCookieName= dealership
 car_dealership.jwtSecret= ======================dealershipJwtSecret===========================
-car_dealership.jwtExpirationMs= 30000
+car_dealership.jwtExpirationMs= 3000000
